# CppRayMarch

./: .gitignore  CMakeLists.txt  README.md  Readme.md  b  build-clang.sh  build-gcc.sh  r
.claude/: settings.local.json
include/: camera.hpp  common.hpp  renderer.hpp  scene.hpp
src/: camera.cpp  main.cpp
src/modules/: camera.cpp  camera.cppm  common.cpp  common.cppm  renderer.cpp  renderer.cppm  scene.cpp  scene.cppm
